# CogVLM

./: .gitignore  CogVLM.py  README.md  gradio_demo.py  gradio_json_demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.md
src/cogvlm/: __init__.py  client.py  conversation_manager.py  core.py  json.py  json_agent.py  server.py
tests/: conftest.py  test_client.py  test_cogvlm.py  test_server.py
